<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item

        android:id="@+id/nav_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/menu_search" />
    <item

        android:id="@+id/nav_addrev"
        android:icon="@drawable/add_to_list_check"
        android:title="@string/menu_addReview" />
    <item

        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_icon_user"
        android:title="@string/menu_profile" />
    <item

        android:id="@+id/nav_collection"
        android:icon="@drawable/ic_icon_collections"
        android:title="@string/menu_collections" />
    <item

        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/menu_home" />


</menu>