<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    tools:context=".ui.Index.fragments.AddReviewFragment">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_icon_user" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/background_circle" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/add_to_list_uncheck"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/add_photo_uncheck"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_preview_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/add_photo_uncheck"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/add_review"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/add_photos"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/add_photos"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/preview"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </TableRow>

    </TableLayout>

</LinearLayout>